--- a/src/Scheduler.WebConsole/Scheduler.WebConsole.csproj
+++ b/src/Scheduler.WebConsole/Scheduler.WebConsole.csproj
@@ -153,6 +153,7 @@
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\handlebars-v4.0.10.js" />
     <Content Include="Scripts\jquery-3.2.1.min.js" />
+    <Content Include="Scripts\jquery-ui.min.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.min.js" />
     <Content Include="Scripts\Scheduler\Scheduler.js" />
