Refactoring (clean up, separation, logging)

--- a/job_examples/MyAmazing.TaskLib/MyAmazing.Console/NLog.config
+++ b/job_examples/MyAmazing.TaskLib/MyAmazing.Console/NLog.config
@@ -2,15 +2,12 @@
   <variable name="logDirectory" value="C:\Logs" />
   <variable name="messageLayout" value="${date:format=yyyy-MM-dd HH\:mm\:ss.fff}|ThreadID:${threadid}|${level}|${callsite}|${message}${exception}" />
   <targets>
-    <target name="CustomJobAppender" type="File" fileName="${logDirectory}/CustomJobLogs_${shortdate}.txt" />
-    <target name="SchedulerAppender" type="File" fileName="${logDirectory}/SchedulerLogs_${shortdate}.txt" />
+    <target name="FileAppender" type="File" fileName="${logDirectory}/MyAmazing.TaskLib_${shortdate}.txt" />
 
     <target name="ConsoleAppender" type="Console" layout="${messageLayout}" />
   </targets>
   <rules>
     <logger name="*" minlevel="Trace" writeTo="ConsoleAppender" />
-    
-    <logger name="CustomJobLogger" minLevel="Trace" writeTo="CustomJobAppender" final="true" />
-    <logger name="*" minLevel="Trace" writeTo="SchedulerAppender" />    
+    <logger name="*" minLevel="Trace" writeTo="FileAppender" />
   </rules>
 </nlog>
