--- a/src/Scheduler.Core/Scheduler.Core.csproj
+++ b/src/Scheduler.Core/Scheduler.Core.csproj
@@ -30,8 +30,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.4.12\lib\net45\NLog.dll</HintPath>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,32 +52,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\JobMetadataAttribute.cs" />
+    <Compile Include="Configurations\GlobalLoggingSettings.cs" />
+    <Compile Include="Configurations\GlobalUnity.cs" />
     <Compile Include="Engine\BaseScheduler.cs" />
     <Compile Include="Engine\EngineDetails.cs" />
     <Compile Include="Engine\EngineState.cs" />
+    <Compile Include="Extensions\BaseJobExtensions.cs" />
     <Compile Include="Jobs\BaseJob.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="Extensions\TypeExtensions.cs" />
     <Compile Include="Helpers\AppDomainManager.cs" />
     <Compile Include="Helpers\ProxyDomain.cs" />
     <Compile Include="Helpers\ProxyDomainFactory.cs" />
     <Compile Include="Engine\ISchedulerEngine.cs" />
     <Compile Include="Jobs\JobInfo.cs" />
     <Compile Include="Jobs\JobState.cs" />
+    <Compile Include="Logging\BaseLogger.cs" />
+    <Compile Include="Logging\ISchedulerLogger.cs" />
+    <Compile Include="Logging\SchedulerLogManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\AssemblyLoaderManager.cs" />
     <Compile Include="Engine\SchedulerEventHandlers.cs" />
     <Compile Include="Engine\SchedulerSettings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="NLog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </Content>
-    <None Include="NLog.xsd">
+    <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
