--- a/src/Scheduler.Engine.Quartz/Scheduler.Engine.Quartz.csproj
+++ b/src/Scheduler.Engine.Quartz/Scheduler.Engine.Quartz.csproj
@@ -43,9 +43,6 @@
     <Reference Include="Microsoft.Win32.Primitives, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Win32.Primitives.4.3.0\lib\net46\Microsoft.Win32.Primitives.dll</HintPath>
     </Reference>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.4.12\lib\net45\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="Quartz, Version=2.6.1.0, Culture=neutral, PublicKeyToken=f6b8c98a402cc8a4, processorArchitecture=MSIL">
       <HintPath>..\packages\Quartz.2.6.1\lib\net40\Quartz.dll</HintPath>
     </Reference>
@@ -115,7 +112,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extension\SchedulerExtension.cs" />
-    <Compile Include="JobData.cs" />
+    <Compile Include="JobMetadata.cs" />
     <Compile Include="Listeners\DependentJobListener.cs" />
     <Compile Include="Listeners\DependentTriggerListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
