Adding Instance ID to Engine Info section

--- a/src/Scheduler.Console/App.config
+++ b/src/Scheduler.Console/App.config
@@ -9,10 +9,12 @@
     <add key="quartz.threadPool.type" value="Quartz.Simpl.SimpleThreadPool, Quartz" />
     <add key="quartz.threadPool.threadCount" value="10" />
     <add key="quartz.threadPool.threadPriority" value="1" />
+
+    <add key="SchedulerInstanceId" value="5AAF9FD7-5BC6-4C49-A7BD-182966A34D4C" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
+      <dependentAssembly>  
         <assemblyIdentity name="System.IO.Compression" publicKeyToken="b77a5c561934e089" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.1.2.0" newVersion="4.1.2.0" />
       </dependentAssembly>
