--- a/src/Scheduler.WebConsole/Web.config
+++ b/src/Scheduler.WebConsole/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="SchedulerInstanceId" value="98C1A030-039D-4EE3-9CCA-640B5F47848A" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
