--- a/src/Scheduler.Core/Scheduler.Core.csproj
+++ b/src/Scheduler.Core/Scheduler.Core.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Attributes\JobMetadataAttribute.cs" />
     <Compile Include="Configurations\GlobalLoggingSettings.cs" />
     <Compile Include="Configurations\GlobalUnity.cs" />
+    <Compile Include="Context\ISchedulerContext.cs" />
+    <Compile Include="Context\SchedulerContext.cs" />
     <Compile Include="Engine\BaseScheduler.cs" />
     <Compile Include="Engine\EngineDetails.cs" />
     <Compile Include="Engine\EngineState.cs" />
