--- a/src/Scheduler.Domain.Data/Scheduler.Domain.Data.csproj
+++ b/src/Scheduler.Domain.Data/Scheduler.Domain.Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BFAAB2FE-7208-4C3A-80D1-9B1DCCE41F3B}</ProjectGuid>
+    <ProjectGuid>{5D366F7C-075D-49FF-A742-78853AA7A6DD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Scheduler.Domain</RootNamespace>
-    <AssemblyName>Scheduler.Domain</AssemblyName>
+    <RootNamespace>Scheduler.Domain.Data</RootNamespace>
+    <AssemblyName>Scheduler.Domain.Data</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,18 +40,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configurations\IAppConfig.cs" />
-    <Compile Include="Entities\EngineInfo.cs" />
-    <Compile Include="Entities\JobDetails.cs" />
-    <Compile Include="Entities\JobsSummary.cs" />
+    <Compile Include="Attributes\ColumnAttribute.cs" />
+    <Compile Include="Attributes\DatabaseGeneratedAttribute.cs" />
+    <Compile Include="Attributes\KeyAttribute.cs" />
+    <Compile Include="Attributes\NotMappedAttribute.cs" />
+    <Compile Include="Attributes\TableAttribute.cs" />
+    <Compile Include="BusinessEntities\JobDetail.cs" />
+    <Compile Include="BusinessEntities\SchedulerInstance.cs" />
+    <Compile Include="BusinessEntities\SchedulerInstanceSetting.cs" />
+    <Compile Include="Dto\InstanceSettings.cs" />
+    <Compile Include="Enums\DatabaseGeneratedOption.cs" />
+    <Compile Include="IDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ISchedulerHubManagerService.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Services\ISchedulerInstanceSettingsService.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Scheduler.Core\Scheduler.Core.csproj">
-      <Project>{9A991B42-89DA-4B3C-8675-0C4E1C7FBACF}</Project>
-      <Name>Scheduler.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
