--- a/src/Scheduler.Infrastructure.Data/Scheduler.Infrastructure.Data.csproj
+++ b/src/Scheduler.Infrastructure.Data/Scheduler.Infrastructure.Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BFAAB2FE-7208-4C3A-80D1-9B1DCCE41F3B}</ProjectGuid>
+    <ProjectGuid>{ACC43FC4-582C-471B-92F4-0F9AF44AB7AC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Scheduler.Domain</RootNamespace>
-    <AssemblyName>Scheduler.Domain</AssemblyName>
+    <RootNamespace>Scheduler.Infrastructure.Data</RootNamespace>
+    <AssemblyName>Scheduler.Infrastructure.Data</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=1.50.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.50.4\lib\net451\Dapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,18 +44,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configurations\IAppConfig.cs" />
-    <Compile Include="Entities\EngineInfo.cs" />
-    <Compile Include="Entities\JobDetails.cs" />
-    <Compile Include="Entities\JobsSummary.cs" />
+    <Compile Include="Services\SchedulerInstanceService.cs" />
+    <Compile Include="Utils\PropertyMap.cs" />
+    <Compile Include="Utils\TableMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ISchedulerHubManagerService.cs" />
+    <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="SchedulerDbContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Scheduler.Core\Scheduler.Core.csproj">
       <Project>{9A991B42-89DA-4B3C-8675-0C4E1C7FBACF}</Project>
       <Name>Scheduler.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Scheduler.Domain.Data\Scheduler.Domain.Data.csproj">
+      <Project>{5D366F7C-075D-49FF-A742-78853AA7A6DD}</Project>
+      <Name>Scheduler.Domain.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Scheduler.Domain\Scheduler.Domain.csproj">
+      <Project>{BFAAB2FE-7208-4C3A-80D1-9B1DCCE41F3B}</Project>
+      <Name>Scheduler.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
