--- a/src/Scheduler.Infrastructure/Scheduler.Infrastructure.csproj
+++ b/src/Scheduler.Infrastructure/Scheduler.Infrastructure.csproj
@@ -68,6 +68,7 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -77,8 +78,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\SchedulerConsoleSettings.cs" />
-    <Compile Include="Configuration\SchedulerHubSettings.cs" />
+    <Compile Include="Configurations\AppConfig.cs" />
     <Compile Include="Hubs\SchedulerHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\SchedulerManagerService.cs" />
