--- a/src/Scheduler.WebConsole/Web.config
+++ b/src/Scheduler.WebConsole/Web.config
@@ -4,12 +4,14 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="SchedulerDWH" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Scheduler;Integrated Security=True;" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
     <add key="SchedulerInstanceId" value="98C1A030-039D-4EE3-9CCA-640B5F47848A" />
   </appSettings>
   <system.web>
