--- a/src/Scheduler.Domain.Data/Scheduler.Domain.Data.csproj
+++ b/src/Scheduler.Domain.Data/Scheduler.Domain.Data.csproj
@@ -31,7 +31,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,25 +42,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\ColumnAttribute.cs" />
-    <Compile Include="Attributes\DatabaseGeneratedAttribute.cs" />
-    <Compile Include="Attributes\KeyAttribute.cs" />
-    <Compile Include="Attributes\NotMappedAttribute.cs" />
-    <Compile Include="Attributes\TableAttribute.cs" />
     <Compile Include="BusinessEntities\JobDetail.cs" />
+    <Compile Include="BusinessEntities\JobStatus.cs" />
     <Compile Include="BusinessEntities\SchedulerInstance.cs" />
-    <Compile Include="BusinessEntities\SchedulerInstanceWithSettings.cs" />
     <Compile Include="BusinessEntities\SchedulerInstanceSetting.cs" />
     <Compile Include="Dto\InstanceSettings.cs" />
-    <Compile Include="Enums\DatabaseGeneratedOption.cs" />
-    <Compile Include="IDbContext.cs" />
+    <Compile Include="Dto\JobDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IJobDetailRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\ISchedulerInstanceRepository.cs" />
     <Compile Include="Repositories\ISchedulerInstanceSettingRepository.cs" />
+    <Compile Include="Services\IJobDetailService.cs" />
     <Compile Include="Services\ISchedulerInstanceSettingsService.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
