--- a/src/Scheduler.Infrastructure.Data.EntityFramework/Scheduler.Infrastructure.Data.EntityFramework.csproj
+++ b/src/Scheduler.Infrastructure.Data.EntityFramework/Scheduler.Infrastructure.Data.EntityFramework.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ACC43FC4-582C-471B-92F4-0F9AF44AB7AC}</ProjectGuid>
+    <ProjectGuid>{C34361C7-286C-4D8E-8DD6-1D995A2B0BC9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Scheduler.Infrastructure.Data</RootNamespace>
-    <AssemblyName>Scheduler.Infrastructure.Data</AssemblyName>
+    <RootNamespace>Scheduler.Infrastructure.Data.EntityFramework</RootNamespace>
+    <AssemblyName>Scheduler.Infrastructure.Data.EntityFramework</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,11 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Linq" />
-    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,24 +47,39 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Services\JobDetailService.cs" />
-    <Compile Include="Services\SchedulerInstanceService.cs" />
+    <Compile Include="Configuration\JobDetailConfiguration.cs" />
+    <Compile Include="Configuration\JobStatusConfiguration.cs" />
+    <Compile Include="Configuration\SchedulerInstanceConfiguration.cs" />
+    <Compile Include="Configuration\SchedulerInstanceSettingConfiguration.cs" />
+    <Compile Include="Context\Providers\SchedulerDbContextProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Context\SchedulerDbContext.cs" />
+    <Compile Include="Repositories\JobDetailRepository.cs" />
+    <Compile Include="Repositories\BaseRepository.cs" />
+    <Compile Include="Repositories\SchedulerInstanceRepository.cs" />
+    <Compile Include="Repositories\SchedulerInstanceSettingRepository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Scheduler.Core\Scheduler.Core.csproj">
       <Project>{9A991B42-89DA-4B3C-8675-0C4E1C7FBACF}</Project>
       <Name>Scheduler.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Scheduler.Domain.Data.EntityFramework\Scheduler.Domain.Data.EntityFramework.csproj">
+      <Project>{29F066C0-222E-4252-85E6-A166813FBAC9}</Project>
+      <Name>Scheduler.Domain.Data.EntityFramework</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Scheduler.Domain.Data\Scheduler.Domain.Data.csproj">
       <Project>{5D366F7C-075D-49FF-A742-78853AA7A6DD}</Project>
       <Name>Scheduler.Domain.Data</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Scheduler.Domain\Scheduler.Domain.csproj">
-      <Project>{BFAAB2FE-7208-4C3A-80D1-9B1DCCE41F3B}</Project>
-      <Name>Scheduler.Domain</Name>
+    <ProjectReference Include="..\Scheduler.Infrastructure.Data\Scheduler.Infrastructure.Data.csproj">
+      <Project>{acc43fc4-582c-471b-92f4-0f9af44ab7ac}</Project>
+      <Name>Scheduler.Infrastructure.Data</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
