--- a/src/Scheduler.WebConsole/packages.config
+++ b/src/Scheduler.WebConsole/packages.config
@@ -3,6 +3,7 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net46" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="jQuery" version="3.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
