Split Core to three layers - Core, Engine and Jobs; Updating dlls for job samples

--- a/job_examples/MyAmazing.TaskLib/MyAmazing.Console/MyAmazing.Console.csproj
+++ b/job_examples/MyAmazing.TaskLib/MyAmazing.Console/MyAmazing.Console.csproj
@@ -50,6 +50,9 @@
     <Reference Include="Scheduler.Core">
       <HintPath>..\Binaries\Scheduler.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Scheduler.Jobs">
+      <HintPath>..\Binaries\Scheduler.Jobs.dll</HintPath>
+    </Reference>
     <Reference Include="Scheduler.Logging.NLog">
       <HintPath>..\Binaries\Scheduler.Logging.NLog.dll</HintPath>
     </Reference>
