--- a/job_examples/MyAmazing.TaskLib/MyAmazing.TaskLib/MyAmazing.TaskLib.csproj
+++ b/job_examples/MyAmazing.TaskLib/MyAmazing.TaskLib/MyAmazing.TaskLib.csproj
@@ -37,6 +37,12 @@
     <Reference Include="Scheduler.Core">
       <HintPath>..\Binaries\Scheduler.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Scheduler.Jobs">
+      <HintPath>..\Binaries\Scheduler.Jobs.dll</HintPath>
+    </Reference>
+    <Reference Include="Scheduler.Logging.NLog">
+      <HintPath>..\Binaries\Scheduler.Logging.NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
