--- a/src/Scheduler.Engine/Scheduler.Engine.csproj
+++ b/src/Scheduler.Engine/Scheduler.Engine.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{74B6A9F3-AF64-4B9F-A9A2-03714323451C}</ProjectGuid>
+    <ProjectGuid>{198E6F67-49DC-41A0-A03A-DDC81F3E25CF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Library.BusinessLayer</RootNamespace>
-    <AssemblyName>Library.BusinessLayer</AssemblyName>
+    <RootNamespace>Scheduler.Engine</RootNamespace>
+    <AssemblyName>Scheduler.Engine</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,13 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="Scheduler.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Binaries\Scheduler.Core.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,11 +40,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseScheduler.cs" />
+    <Compile Include="EngineDetails.cs" />
+    <Compile Include="Enums\EngineState.cs" />
+    <Compile Include="Enums\JobActionState.cs" />
+    <Compile Include="Enums\JobState.cs" />
+    <Compile Include="ISchedulerEngine.cs" />
+    <Compile Include="SchedulerEventHandlers.cs" />
+    <Compile Include="SchedulerSettings.cs" />
+    <Compile Include="Jobs\JobInfo.cs" />
+    <Compile Include="Jobs\JobMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\SomeService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\Scheduler.Core\Scheduler.Core.csproj">
+      <Project>{9A991B42-89DA-4B3C-8675-0C4E1C7FBACF}</Project>
+      <Name>Scheduler.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Scheduler.Domain.Data\Scheduler.Domain.Data.csproj">
+      <Project>{5D366F7C-075D-49FF-A742-78853AA7A6DD}</Project>
+      <Name>Scheduler.Domain.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Scheduler.Jobs\Scheduler.Jobs.csproj">
+      <Project>{FC3B22A9-D34F-466F-8094-0444A9E67B4D}</Project>
+      <Name>Scheduler.Jobs</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
