--- a/src/Scheduler.Console/Scheduler.Console.csproj
+++ b/src/Scheduler.Console/Scheduler.Console.csproj
@@ -8,9 +8,10 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>Scheduler.Console</RootNamespace>
     <AssemblyName>Scheduler.Console</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -75,6 +76,10 @@
       <Project>{9a991b42-89da-4b3c-8675-0c4e1c7fbacf}</Project>
       <Name>Scheduler.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Scheduler.Dependencies\Scheduler.Dependencies.csproj">
+      <Project>{a5dba6bf-0d61-451f-8ce2-fe9d27d42d0b}</Project>
+      <Name>Scheduler.Dependencies</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Scheduler.Domain.Data\Scheduler.Domain.Data.csproj">
       <Project>{5D366F7C-075D-49FF-A742-78853AA7A6DD}</Project>
       <Name>Scheduler.Domain.Data</Name>
@@ -94,6 +99,10 @@
     <ProjectReference Include="..\Scheduler.Logging.NLog\Scheduler.Logging.NLog.csproj">
       <Project>{e333f50a-de6b-4c3d-a686-feef7c7d627f}</Project>
       <Name>Scheduler.Logging.NLog</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Scheduler.Logging\Scheduler.Logging.csproj">
+      <Project>{5132F164-07EA-47F4-9BB6-FD3265927EF6}</Project>
+      <Name>Scheduler.Logging</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
