--- a/job_examples/MyAmazing.TaskLib/MyAmazing.Console/MyAmazing.Console.csproj
+++ b/job_examples/MyAmazing.TaskLib/MyAmazing.Console/MyAmazing.Console.csproj
@@ -8,9 +8,10 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>MyAmazing.Console</RootNamespace>
     <AssemblyName>MyAmazing.Console</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -47,14 +48,15 @@
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.4.12\lib\net45\NLog.dll</HintPath>
     </Reference>
-    <Reference Include="Scheduler.Core">
-      <HintPath>..\Binaries\Scheduler.Core.dll</HintPath>
+    <Reference Include="Scheduler.Dependencies">
+      <HintPath>..\Binaries\Scheduler.Dependencies.dll</HintPath>
     </Reference>
-    <Reference Include="Scheduler.Jobs">
+    <Reference Include="Scheduler.Jobs, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Binaries\Scheduler.Jobs.dll</HintPath>
     </Reference>
-    <Reference Include="Scheduler.Logging.NLog">
-      <HintPath>..\Binaries\Scheduler.Logging.NLog.dll</HintPath>
+    <Reference Include="Scheduler.Logging">
+      <HintPath>..\Binaries\Scheduler.Logging.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
