--- a/src/Scheduler.Caching/Scheduler.Caching.csproj
+++ b/src/Scheduler.Caching/Scheduler.Caching.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5132F164-07EA-47F4-9BB6-FD3265927EF6}</ProjectGuid>
+    <ProjectGuid>{3E617056-3B9B-4187-A9E2-9ABE501C7CBE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Scheduler.Logging</RootNamespace>
-    <AssemblyName>Scheduler.Logging</AssemblyName>
+    <RootNamespace>Scheduler.Caching</RootNamespace>
+    <AssemblyName>Scheduler.Caching</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,19 +30,27 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="BaseLogger.cs" />
-    <Compile Include="Constants.cs" />
-    <Compile Include="ILogger.cs" />
-    <Compile Include="ILoggerProvider.cs" />
-    <Compile Include="Loggers\NoLogger.cs" />
-    <Compile Include="Loggers\LoggerProvider.cs" />
-    <Compile Include="Loggers\LogManager.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Scheduler.Core.Dependencies\Scheduler.Core.Dependencies.csproj">
-      <Project>{A5DBA6BF-0D61-451F-8CE2-FE9D27D42D0B}</Project>
-      <Name>Scheduler.Core.Dependencies</Name>
+    <Compile Include="Constants.cs" />
+    <Compile Include="ICache.cs" />
+    <Compile Include="NoCache.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebCache.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Scheduler.Core\Scheduler.Core.csproj">
+      <Project>{9A991B42-89DA-4B3C-8675-0C4E1C7FBACF}</Project>
+      <Name>Scheduler.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
