--- a/src/Scheduler.Core/Scheduler.Core.csproj
+++ b/src/Scheduler.Core/Scheduler.Core.csproj
@@ -35,9 +35,14 @@
     <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\KeyAttribute.cs" />
+    <Compile Include="Configurations\ApplicationConfiguration.cs" />
+    <Compile Include="Configurations\ICacheConfiguration.cs" />
+    <Compile Include="Configurations\IEngineConfiguration.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="Context\IContext.cs" />
+    <Compile Include="Context\IApplicationContext.cs" />
     <Compile Include="Context\SchedulerContext.cs" />
+    <Compile Include="Extensions\ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
