--- a/src/Scheduler.Infrastructure.Data/Scheduler.Infrastructure.Data.csproj
+++ b/src/Scheduler.Infrastructure.Data/Scheduler.Infrastructure.Data.csproj
@@ -32,10 +32,18 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Services\JobDetailService.cs" />
-    <Compile Include="Services\SchedulerInstanceService.cs" />
+    <Compile Include="Services\SchedulerSettingsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Scheduler.Caching\Scheduler.Caching.csproj">
+      <Project>{3E617056-3B9B-4187-A9E2-9ABE501C7CBE}</Project>
+      <Name>Scheduler.Caching</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Scheduler.Core\Scheduler.Core.csproj">
+      <Project>{9a991b42-89da-4b3c-8675-0c4e1c7fbacf}</Project>
+      <Name>Scheduler.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Scheduler.Domain.Data\Scheduler.Domain.Data.csproj">
       <Project>{5d366f7c-075d-49ff-a742-78853aa7a6dd}</Project>
       <Name>Scheduler.Domain.Data</Name>
