--- a/src/Scheduler.WebConsole/Scheduler.WebConsole.csproj
+++ b/src/Scheduler.WebConsole/Scheduler.WebConsole.csproj
@@ -226,6 +226,10 @@
       <Project>{a5dba6bf-0d61-451f-8ce2-fe9d27d42d0b}</Project>
       <Name>Scheduler.Core.Dependencies</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Scheduler.Core\Scheduler.Core.csproj">
+      <Project>{9A991B42-89DA-4B3C-8675-0C4E1C7FBACF}</Project>
+      <Name>Scheduler.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Scheduler.Domain.Data\Scheduler.Domain.Data.csproj">
       <Project>{5D366F7C-075D-49FF-A742-78853AA7A6DD}</Project>
       <Name>Scheduler.Domain.Data</Name>
