--- a/src/Scheduler.WebConsole/Web.config
+++ b/src/Scheduler.WebConsole/Web.config
@@ -5,27 +5,22 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  </configSections>
   <connectionStrings>
-    <add name="SchedulerDWH" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Scheduler;Integrated Security=True;MultipleActiveResultSets=true;" />
+    <add name="DWH" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Scheduler;Integrated Security=True;MultipleActiveResultSets=true;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SchedulerInstanceId" value="98C1A030-039D-4EE3-9CCA-640B5F47848A" />
-  </appSettings>
-  <!--
-    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.7.1" />
-      </system.Web>
-  -->
+    <!-- Scheduler settings -->
+    <add key="Scheduler:ApplicationId" value="98C1A030-039D-4EE3-9CCA-640B5F47848A" />
+    <!-- Cache settings -->
+    <add key="Cache:Expiration" value="30" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.1" />
     <httpRuntime targetFramework="4.6" />
