--- a/src/Scheduler.Caching/Scheduler.Caching.csproj
+++ b/src/Scheduler.Caching/Scheduler.Caching.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -41,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configurations\ICacheConfiguration.cs" />
+    <Compile Include="Configurations\CacheConfiguration.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="ICache.cs" />
     <Compile Include="NoCache.cs" />
