--- a/src/Scheduler.Core.Dependencies/Scheduler.Core.Dependencies.csproj
+++ b/src/Scheduler.Core.Dependencies/Scheduler.Core.Dependencies.csproj
@@ -57,6 +57,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configurations\DependencyConfiguration.cs" />
+    <Compile Include="Configurations\DependencyConfigurationManager.cs" />
     <Compile Include="Configurations\IDependencyConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Container.cs" />
